# bigquery-etl

./: .bigqueryrc  .dockerignore  .env.template  .eslintrc.yml  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .yamllint.yaml  404.html  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DSRETest.Dockerfile  Dockerfile  FIXME_bigconfig.yml  GRAVEYARD.md  HACK_WEEK_SLACK_CONTENT.md  M1_MAC_SETUP.md  Makefile  NOTES.md  README-CLAUDE-CODE.md  README.md  ]  bigeye_credentials.ini  bqetl  bqetl.html  bqetl_project.yaml  bqetl_targets.yaml  bqetl_targets.yaml.example  ci_job.yaml  ci_workflow.yaml  clients_all_time.sql  clients_all_time_v0.sql  conftest.py  constraints.txt  dags.yaml  deploy.sh  (+16 more)
..venv/: pyvenv.cfg
.circleci/: config.template.yml  config.yml  post-diff.js  workflows.yml
.claude/: settings.json
.github/: CLAUDE_REVIEW_TEST_PLAN.md  dependabot.yml  pull_request_template.md  reviewer_checklist.md
.probe_cache/: httpsprobeinfotelemetrymozillaorggleanandroid-placesmetrics  httpsprobeinfotelemetrymozillaorggleanbergamotpings  httpsprobeinfotelemetrymozillaorggleanengine-gecko-betametrics  httpsprobeinfotelemetrymozillaorggleanfenixdependencies  httpsprobeinfotelemetrymozillaorggleanfenixpings  httpsprobeinfotelemetrymozillaorggleanfirefox-android-releasedependencies  httpsprobeinfotelemetrymozillaorggleanfirefox-android-releasepings  httpsprobeinfotelemetrymozillaorggleanfirefox-focus-androiddependencies  httpsprobeinfotelemetrymozillaorggleanfirefox-focus-androidpings  httpsprobeinfotelemetrymozillaorggleanfirefox-focus-iosdependencies  httpsprobeinfotelemetrymozillaorggleanfirefox-ios-releasedependencies  httpsprobeinfotelemetrymozillaorggleanfirefox-reality-pcdependencies  httpsprobeinfotelemetrymozillaorggleanfirefox-reality-pcpings  httpsprobeinfotelemetrymozillaorggleanfirefox-realitydependencies  httpsprobeinfotelemetrymozillaorggleanfirefox-realitypings  httpsprobeinfotelemetrymozillaorggleangeckometrics  httpsprobeinfotelemetrymozillaorggleangeckopings  httpsprobeinfotelemetrymozillaorggleanglean-androidmetrics  httpsprobeinfotelemetrymozillaorggleanglean-coremetrics  httpsprobeinfotelemetrymozillaorggleanglean-corepings  httpsprobeinfotelemetrymozillaorggleanglean-jspings  httpsprobeinfotelemetrymozillaorggleanlib-crashmetrics  httpsprobeinfotelemetrymozillaorggleanlockwise-iosdependencies  httpsprobeinfotelemetrymozillaorggleanlogins-storemetrics  httpsprobeinfotelemetrymozillaorggleanmachpings  httpsprobeinfotelemetrymozillaorggleanmozilla-vpndependencies  httpsprobeinfotelemetrymozillaorggleanmozilla-vpnpings  httpsprobeinfotelemetrymozillaorggleanmozregressionpings  httpsprobeinfotelemetrymozillaorggleannimbusmetrics  httpsprobeinfotelemetrymozillaorggleanreference-browserdependencies  httpsprobeinfotelemetrymozillaorggleanrepositories  httpsprobeinfotelemetrymozillaorggleansupport-migrationmetrics  httpsprobeinfotelemetrymozillaorggleansupport-migrationpings  httpsprobeinfotelemetrymozillaorggleansyncmetrics  httpsprobeinfotelemetrymozillaorggleansyncpings
bigquery_etl/: __init__.py  _version.py  backfill_main_v5.py  broken_views.py  check_desc.py  config.py  copy_deduplicate.py  dependency.py  deploy.py  dryrun.py  generate_incremental_table.py  generate_views.py  json_to_table_ddl.py  metrics.py  parse_metadata.py  parse_udf.py  publish_json.py  publish_metadata.py  publish_static.py  run_multipart_query.py  run_query.py  sql_test_plugin.py  static.py  stripe.py  udf_test_plugin.py  util.py  validate_metadata.py
bqetl/: index.html
client/: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  package-lock.json  package.json  rollup.config.js
cookbooks/: common_workflows.html  creating_a_derived_dataset.html
dags/: bqetl_account_ecosystem.py  bqetl_accounts_backend_external.py  bqetl_accounts_db.py  bqetl_accounts_db_daily.py  bqetl_accounts_derived.py  bqetl_acoustic_contact_export.py  bqetl_acoustic_raw_recipient_export.py  bqetl_acoustic_suppression_list.py  bqetl_activity_stream.py  bqetl_addons.py  bqetl_addons_daily.py  bqetl_addons_moderations.py  bqetl_adjust.py  bqetl_adjust_derived.py  bqetl_adm_engagements_daily.py  bqetl_ads.py  bqetl_ads_hourly.py  bqetl_ai_usage.py  bqetl_alchemer.py  (+200 more)
(+22794 files in other folders)
