[tool.poetry]
name = "mozilla-bigquery-etl"
version = "20.12.2"
description = "Tooling for building derived datasets in BigQuery"
homepage = "https://github.com/mozilla/bigquery-etl"
authors = ["Mozilla Corporation <fx-data-dev@mozilla.org>"]
packages = [
  { include = "bigquery_etl" },
  { include = "sql_generators" },
]
include = ["target/*.jar"]

[tool.poetry.scripts]
bqetl = 'bigquery_etl.cli:cli'


[tool.poetry.dependencies]
python = "^3.10,<3.11"
attrs = "==22.1.0"
authlib = "==1.1.0"
cattrs = "==22.2.0"
click = "==8.1.3"
gcloud = "==0.18.3"
gcsfs = "==2022.5.0"
gitpython = "==3.1.29"
google-cloud-bigquery = "==3.2.0"
google-cloud-storage = "==2.5.0"
jinja2 = "==3.1.2"
jsonschema = "==4.17.0"
markdown-include = "==0.7.0"
mkdocs = "==1.4.2"
mkdocs-awesome-pages-plugin = "==2.8.0"
mkdocs-material = "==8.5.7"
mozilla-schema-generator = "==0.5.1"
pandas = "==1.5.1"
pathos = "==0.2.9"
pyarrow = "==8.0.0"
pyjnius = "==1.4.2"
pyyaml = "==6.0"
smart-open = "==6.2.0"
sqlparse = "==0.4.3"
stripe = "==4.2.0"
ujson = "==5.5.0"
yamllint = "==1.28.0"
cython = "^0.29.32"
pytest = "^7.2.0"
pre-commit = "==2.20.0"
pytest-xdist = "==3.0.2"
mypy = "^0.982"
flake8 = "^4"
isort = "^5.7.0"
types-python-dateutil = "^2.8.19.2"
types-pytz = "^2022.6.0.1"
types-pyyaml = "^6.0.12.1"
types-requests = "^2.28.11.2"
types-ujson = "^5.5.0"
pytest-flake8 = "^1.1.1"
pytest-black = "^0.3.12"
pytest-mypy = "^0.10.2"
pytest-pydocstyle = "^2.3.1"

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
skip = ["dags","script/legacy","target","venv"]

[tool.pytest.ini_options]
addopts = [
 "--strict-markers",
 "--ignore-glob=tests/sql/glam-fenix-dev/glam_etl/*/data.py",
 "--ignore-glob=tests/sql/glam-fenix-dev/glam_etl/*.py",
]
filterwarnings = [
# upstream lib imports ABC improperly for backward compatibility
  "ignore::DeprecationWarning:google.protobuf.descriptor",
  "ignore::DeprecationWarning:google.protobuf.internal.well_known_types",
# Silence: "Your application has authenticated using end user credentials from Google Cloud SDK"
  "ignore::UserWarning:google.auth",
]
markers = [
  "integration: mark tests that check integration with external services. Skipped when not specifically enabled.",
  "java: mark tests that require java dependencies. Skipped when not specifically enabled and java is not available.",
]
norecursedirs = [
  "venv",
  "script/legacy",
]
testpaths = [
  "bigquery_etl",
  "tests",
  # todo: make this more generic to support other projects
  "sql/moz-fx-data-shared-prod/udf",
  "sql/moz-fx-data-shared-prod/udf_js",
  "sql/mozfun",
  "script",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
